<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/size_16"
    android:paddingLeft="@dimen/size_16"
    android:paddingRight="@dimen/size_16"
    android:paddingTop="@dimen/size_16"
    android:background="@color/indigo_500"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/size_4"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:paddingTop="@dimen/size_4"
            android:layout_marginLeft="@dimen/size_8"
            android:paddingLeft="@dimen/size_4"
            android:layout_marginRight="@dimen/size_8"
            android:paddingRight="@dimen/size_4"
            android:layout_marginBottom="@dimen/size_4"
            android:gravity="center_horizontal"
            android:text="@string/thank"
            android:textSize="@dimen/text_28"
            android:textStyle="bold"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:paddingTop="@dimen/size_4"
            android:layout_marginLeft="@dimen/size_8"
            android:paddingLeft="@dimen/size_4"
            android:layout_marginRight="@dimen/size_8"
            android:paddingRight="@dimen/size_4"
            android:layout_marginBottom="@dimen/size_4"
            android:gravity="center_horizontal"
            android:text="@string/rincian"
            android:textSize="@dimen/text_22"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/size_4"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:paddingTop="@dimen/size_4"
                android:layout_marginLeft="@dimen/size_8"
                android:paddingLeft="@dimen/size_4"
                android:layout_marginRight="@dimen/size_8"
                android:paddingRight="@dimen/size_4"
                android:layout_marginBottom="@dimen/size_4"
                android:gravity="center_horizontal"
                android:text="@string/jarak"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lblJarak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:paddingTop="@dimen/size_4"
                android:layout_marginLeft="@dimen/size_8"
                android:paddingLeft="@dimen/size_4"
                android:layout_marginRight="@dimen/size_8"
                android:paddingRight="@dimen/size_4"
                android:layout_marginBottom="@dimen/size_4"
                android:gravity="center_horizontal"
                android:text="@string/kosong"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/size_4"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:paddingTop="@dimen/size_4"
                android:layout_marginLeft="@dimen/size_8"
                android:paddingLeft="@dimen/size_4"
                android:layout_marginRight="@dimen/size_8"
                android:paddingRight="@dimen/size_4"
                android:layout_marginBottom="@dimen/size_4"
                android:gravity="center_horizontal"
                android:text="@string/total"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:paddingTop="@dimen/size_4"
                android:layout_marginLeft="@dimen/size_8"
                android:paddingLeft="@dimen/size_4"
                android:layout_marginRight="@dimen/size_8"
                android:paddingRight="@dimen/size_4"
                android:layout_marginBottom="@dimen/size_4"
                android:gravity="center_horizontal"
                android:text="@string/kosong"
                android:textSize="@dimen/text_22"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/newHere"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8"
            android:paddingLeft="@dimen/size_4"
            android:layout_marginRight="@dimen/size_8"
            android:paddingRight="@dimen/size_4"
            android:layout_marginBottom="@dimen/size_4"
            android:paddingBottom="@dimen/size_4"
            android:gravity="center_horizontal"
            android:text="@string/end_driving"
            android:textColor="@color/indigo_100"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8"
            android:paddingLeft="@dimen/size_4"
            android:layout_marginRight="@dimen/size_8"
            android:paddingRight="@dimen/size_4"
            android:layout_marginBottom="@dimen/size_8"
            android:paddingBottom="@dimen/size_4"
            android:gravity="center_horizontal"
            android:text="@string/thank"
            android:textColor="@color/indigo_100"/>


        <EditText
            android:id="@+id/edtKritikSaran"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginBottom="@dimen/size_8"
            android:hint="@string/kritik"
            android:textColorHint="@color/common_action_bar_splitter"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginTop="@dimen/size_48"
            android:text="@string/submit"
            android:background="@color/pink_200"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
