<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/size_16"
    android:paddingLeft="@dimen/size_16"
    android:paddingRight="@dimen/size_16"
    android:paddingTop="@dimen/size_16"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.keltech.travel.MainActivity">

    <LinearLayout
        android:id="@+id/getTaxi"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="5">

        <ImageView
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_airport_shuttle_black_48dp" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/size_8"
            android:text="@string/getTaxi"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getBike"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="5">

        <ImageView
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_directions_bike_black_48dp" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/size_8"
            android:text="@string/getBike"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/driverBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/be_a_driver"
            android:textSize="@dimen/text_28"/>
    </LinearLayout>

</LinearLayout>
