<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="com.keltech.travel.PickUpActivity">
    <AutoCompleteTextView
        android:id="@+id/etOrigin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:hint="Choose a starting point..." />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/dotted" />

    <AutoCompleteTextView
        android:id="@+id/etDestination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="Choose a destination..." />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/findPath"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_width="36dp"
            android:src="@drawable/ic_send_grey600_48dp"
            android:layout_height="36dp" />
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_distance"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 km"
            android:id="@+id/tvDistance" />

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_clock"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 min"
            android:id="@+id/tvDuration" />
    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pickUp"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/indigo_100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pick_up_here"
                android:textSize="@dimen/text_18"
                android:gravity="center_horizontal|center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/order"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pink_400">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/order"
                    android:textSize="@dimen/text_18"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pink_200">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_18"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
